Revert "Fixing iPhone Display"
This reverts commit 497e62cdee104e23de6cabf707ff111e69ffeaf3.

--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
 }
 
 h1 {
